@@ -6,6 +6,8 @@ import fc.be.app.domain.member.exception.MemberException;
 import fc.be.app.domain.member.repository.MemberRepository;
 import fc.be.app.domain.place.service.PlaceService;
 import fc.be.app.domain.review.dto.*;
+import fc.be.app.domain.review.dto.response.ReviewResponse;
+import fc.be.app.domain.review.dto.response.ReviewsResponse;
 import fc.be.app.domain.review.entity.Review;
 import fc.be.app.domain.review.exception.ReviewErrorCode;
 import fc.be.app.domain.review.exception.ReviewException;
@@ -15,12 +17,14 @@ import fc.be.openapi.google.ReviewJsonReader;
 import fc.be.openapi.google.dto.review.GoogleReviewResponse;
 import fc.be.openapi.google.dto.review.form.GoogleRatingResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -39,7 +43,7 @@ public class ReviewService {
         Integer placeId = reviewCreateRequest.placeId();
         Integer contentTypeId = reviewCreateRequest.contentTypeId();
 
-        Member member = memberRepository.findById(1L).orElseThrow(()->
+        Member member = memberRepository.findById(1L).orElseThrow(() ->
                 new MemberException(MemberErrorCode.MEMBER_NOT_FOUND));
 
         placeService.saveOrUpdatePlace(placeId, contentTypeId);
@@ -57,11 +61,18 @@ public class ReviewService {
         return ReviewEditResponse.from(reviewRepository.save(review));
     }
 
-    public ReviewGetMemberResponse getMemberReviews(Pageable pageable) {
-        Long memberId = 1L;
-        // todo [Review] Security 적용 -2
-        return ReviewGetMemberResponse.from(
-                reviewRepository.findByMemberId(memberId, pageable).toList());
+    public ReviewsResponse getMemberReviews(Long memberId, Pageable pageable) {
+        Page<Review> reviews = reviewRepository.findByMemberId(memberId, pageable);
+
+        int totalPages = reviews.getTotalPages();
+        long totalElements = reviews.getTotalElements();
+        int number = reviews.getNumber();
+        int size = reviews.getSize();
+        boolean first = reviews.isFirst();
+        boolean last = reviews.isLast();
+        List<ReviewResponse> content = reviews.get().map(ReviewResponse::of).collect(Collectors.toList());
+
+        return new ReviewsResponse(content, number, size, totalPages, totalElements, first, last);
     }
 
     @Transactional
